[package]
name = "natsuki"
version = "3.0.9"
authors = [
    "Chen-Pang He (https://jdh8.org)",
    "u/YourWrstNightmare (https://www.reddit.com/user/YourWrstNightmare)",
    "u/RoseQuartz6758 (https://www.reddit.com/user/RoseQuartz6758)",
]
edition = "2021"
description = "Discord bot named after Natsuki from Doki Doki Literature Club"
repository = "https://github.com/jdh8/natsuki"
license = "MIT"
categories = ["games"]
keywords = ["discord", "ddlc"]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
base64 = "0.22.1"
bitflags = "2.9.1"
chrono = "0.4.41"
command_attr = "0.5.1"
csscolorparser = "0.7.2"
futures = "0.3.28"
image = "0.25.6"
md5 = "0.8.0"
poise = { version = "0.6.1", features = ["collector"] }
rand = "0.9.1"
regex = "1.9.5"
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-serenity = "0.56.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = "1.46.1"
topgg = { version = "1.4.1", features = ["autoposter", "serenity-cached"] }
tree_magic_mini = "3.0.3"
webp = "0.3.0"
