[package]
name = "natsuki"
version = "3.1.1"
authors = [
    "Chen-Pang He (https://jdh8.org)",
    "u/YourWrstNightmare (https://www.reddit.com/user/YourWrstNightmare)",
    "u/RoseQuartz6758 (https://www.reddit.com/user/RoseQuartz6758)",
]
edition = "2021"
description = "Discord bot named after Natsuki from Doki Doki Literature Club"
repository = "https://github.com/jdh8/natsuki"
license = "MIT"
categories = ["games"]
keywords = ["discord", "ddlc"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
base64 = "0.22.1"
bitflags = "2.10.0"
chrono = "0.4.42"
command_attr = "0.5.1"
csscolorparser = "0.8.1"
futures = "0.3.28"
image = "0.25.9"
md5 = "0.8.0"
poise = { version = "0.6.1", features = ["collector"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
topgg = { version = "1.4.1", features = ["autoposter", "serenity-cached"] }
tree_magic_mini = "3.2.2"
webp = "0.3.1"
