[package]
name = "natsuki"
version = "3.1.2"
authors = [
    "Chen-Pang He (https://jdh8.org)",
    "u/YourWrstNightmare (https://www.reddit.com/user/YourWrstNightmare)",
    "u/RoseQuartz6758 (https://www.reddit.com/user/RoseQuartz6758)",
]
edition = "2021"
description = "Discord bot named after Natsuki from Doki Doki Literature Club"
repository = "https://github.com/jdh8/natsuki"
license = "MIT"
categories = ["games"]
keywords = ["discord", "ddlc"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bitflags = "2.11.1"
chrono = "0.4.44"
csscolorparser = "0.8.3"
futures = "0.3.32"
image = "0.25.10"
md5 = "0.8.0"
poise = { version = "0.6.2", features = ["collector"] }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
topgg = { version = "1.4.2", features = ["autoposter", "serenity-cached"] }
tree_magic_mini = "3.2.2"
webp = "0.3.1"
